# courses

./: .gitignore  README.md  mkdocs.yml  package-lock.json
.github/workflows/: docs.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
alpine-course/theory_part_1/: 5_x-on.html
alpine-course/theory_part_2/: 1_functions_components.html
c/0de5/: binary.c  r2_walkthrough.c  radare2.md  readme.md  strings.c  welcome.c
c/memory/: .gitignore  README.md
c/minidb/: Makefile
c/minidb-net/: Makefile
c/socket/: client.c  protocol.h  server.c
c/thread/: args_thread.c  conflict.c  cpu.c  join_thread.c  mutex.c  semaphore.c  tsd.c  (+4 more)
cuda/: module2_search.md  readme.md
db/mysql/tests/heap/: CMakeLists.txt  CMakeLists.txt.v1  Makefile  README.md  rebuild.sh
db/mysql/tests/ib_parser/: CMakeLists.txt  innodb_page.c  innodb_page.h  parser_test.c
db/mysql/tests/ib_parser2/: CMakeLists.txt  my_innodb_stubs.cc  parser_main.cc  tables_dict.h  tables_json.h
db/mysql/tests/ib_parser8/: CMakeLists.txt  compile_flags.txt  my_innodb_offsets.h  my_innodb_stubs.cc  parser_main.cc  pfs_stub.c  tables_dict.cc  tables_dict.h  tables_json.cc
db/mysql/tests/mysql-chdb-plugin/: CLAUDE.md  CMakeLists.txt  CRASH_SOLUTION.md  EMBEDDED_VS_EXTERNAL.md  MANUAL_SETUP_STEPS.md  README.md  README_TVF_SETUP.md  SOLUTION_SUMMARY.md  TVF_TEST_README.md  WORKING_EXAMPLE.md  WRAPPER_STRATEGY_EXPLAINED.md  build_embedded_tvf.sh  build_libchdb_tvf.sh  build_tvf_manual.sh  build_wrapper_tvf.sh  chdb_http_server.cpp  chdb_query_helper  chdb_query_helper.cpp  chdb_service.proto  check_debug_log.sh  check_functions.sql  check_mysql_crash.sh  check_mysql_udf.sh  clean_mysql_functions.sql  cleanup_and_restart.sh  datetime_json_example.sql  diagnose_api_issue.sh  fix_debug_log.sh  fix_mysql_permissions.sh  format_example.sql  install_wrapper.sh  ip_udf_examples.sql  json_table_example.sql  json_working_example.sql  quick_rebuild.sh  rebuild_and_test.sh  rebuild_json_functions.sh  rebuild_json_safe.sh  rebuild_wrapper.sh  test_api.sh  (+11 more)
db/mysql/tests/mysql-chdb-plugin/docs/: API_UDF_GUIDE.md  BUFFER_SIZE_GUIDE.md  CHDB_SERVER_DESIGN.md  COMPLETE_INTEGRATION_GUIDE.md  EMBEDDED_VS_EXTERNAL.md  FORMATTING_RESULTS.md  INTEGRATION_SUMMARY.md  JSON_TABLE_GUIDE.md  JSON_TABLE_TIPS.md  MANUAL_SETUP_STEPS.md  README_LIBCHDB.md  SUCCESS_SUMMARY.md  TABLE_FUNCTION_GUIDE.md  TVF_TEST_README.md  analytical_data_architecture.md  mysql_udf_overview.md
db/mysql/tests/mysql-chdb-plugin/examples/: clickhouse_mysql_join_example.sql  json_table_vs_cte_comparison.sql
db/mysql/tests/mysql-chdb-plugin/scripts/: build.sh  build_api_udf.sh  build_chdb_tvf.sh  build_json_table_functions.sh  build_table_functions.sh  build_tvf.sh  install.sh  install_api_udf.sql  install_api_udf_safe.sql  install_chdb_api.sh  install_chdb_tvf.sh  install_ip_udf.sh  install_json_table_functions.sql  install_json_udf.sh  install_table_functions.sql  install_tvf.sh  rebuild_with_limit.sh  run_chdb_tvf_test.sh  run_tvf_test.sh  run_tvf_test_quick.sh  uninstall.sh  uninstall_api_udf.sql  uninstall_tvf.sh  update_buffer_size.sh
db/mysql/tests/mysql-chdb-plugin/src/: chdb_api_functions.cpp  chdb_api_ip_json_udf.cpp  chdb_api_ip_udf.cpp  chdb_api_json_udf.cpp  chdb_api_udf.cpp  chdb_clickhouse_tvf.cpp  chdb_clickhouse_tvf_debug.cpp  chdb_http_client_udf.cpp  chdb_json_table_functions.cpp  chdb_json_table_functions_fixed.cpp  chdb_json_table_functions_safe.cpp  chdb_table_functions.cpp  chdb_tvf_embedded.cpp  chdb_tvf_libchdb.cpp  chdb_tvf_wrapper.cpp  simple_chdb_udf.cpp  test_tvf_plugin.cpp
db/mysql/tests/mysql-chdb-plugin/tests/: create_test1_table.sql  test_api_udf.sql  test_chdb_tvf.sql  test_json_table_functions.sql  test_table_join.sql  test_tvf_join.sql  test_udf.sql
db/mysql/tests/mysql-to-chdb-example/: .gitignore  API_REFERENCE.md  CLICKHOUSE_OPTIMIZATION_INSIGHTS.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  INSTALL_PROTOBUF.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  append_mode_config.example  build_api_server.sh  build_simple.sh  chdb.h  chdb_api.pb.cc  chdb_api.pb.h  chdb_api.proto  chdb_api_client  chdb_api_client.cpp  chdb_api_client_simple  chdb_api_client_simple.cpp  chdb_api_server  chdb_api_server.cpp  chdb_api_server_simple  chdb_api_server_simple.cpp  chdb_persist.h  check_chdb_symbols.cpp  check_chdb_system.sh  check_dependencies.sh  check_status.cpp  check_storage.sh  check_table.sql  cleanup.sh  common.h  compile_test.sh  convert_to_mergetree.cpp  execute_sql.cpp  export_for_clickhouse.sh  feed_data.cpp  feed_data_simple.cpp  (+36 more)
db/mysql/tests/mysql-to-chdb-example/clickhouse_data/: data.txt
db/mysql/tests/mysql-to-chdb-example/docs/: api-server-approach.md
docs/: index.md  summary.md  summary_2023.md  summary_2024.md
elixir-auction/: README.md  mix.exs
elixir-socket/: readme.txt
go/: README.md
js-first-steps/: README.md
linux/: disks.md
new-grid-times/: package-lock.json
one-page/: apache-dorid.md  apache-doris.md  cachelib.md  caddy-tcp.md  claude-mcp.md  cmu-intro.md  create-react-app.md  docker-ardan.md  docker-bootdev.md  docker-build.md  functional-js.md  git-bootdev.md  git-in-depth.md  git-useful.md  grpc-zig.md  hashi-packer.md  just-javascript.md  kubernetes-ardan.md  llama.md  postgres.md  python-env.md  revealjs.md  vimified.md
phoenix-live/: .gitignore  README.md
react-blog-mdx/: package-lock.json  package.json
rust/: rust_conversation_summary.md  rust_conversation_summary.txt  transcript.json
site/: 404.html  index.html  sitemap.xml
sole-and-ankle/: package-lock.json
svelte-demo/: package-lock.json  package.json
svelte-game/: package.json
svelte-shadcdn/: README.md  package-lock.json  package.json
tailwind-css/: README.md  index.html  index2.html  index3.html  index4.html  package-lock.json  package.json  style.css  tailwind.config.js
vanilla-js-projects/: README.md
vite-demo/: README.md  main.js  package-lock.json  package.json  postcss.config.cjs  style.css
vueschool-forum/: README.md  index.html  package-lock.json
zig/: readme.md  ziglings.md
(+1270 files in other folders)
